    being made instead to the non-synchronized forms of the predicates, which
    would manifest in random failures of thread goals.

    Corrected a long standing bug where a runtime-compiled meta-call within
    a category would be compiled as a call to a predicate of the object
    importing the category instead as a call to a local category predicate.

    Refined error checking for the built-in predicates category_property/2,
    object_property/2, and protocol_property/2, throwing a type_error/2 when
    the second argument is neither a variable or a callable term.

    For all config files, renamed the predicate '$lgt_is_proper_list'/1 to
    '$lgt_is_list'/1 and and replaced the old '$lgt_is_list'/1 predicate by
    a new '$lgt_is_list_or_partial_list'/1 predicate.

    Updated the SWI-Prolog config file in order to avoid preventing loading
    of a Logtalk source file when a Prolog file with the same name exists on
    the same lookup directory. In addition, add source location information
    to the generated Prolog files resulting from the compilation of Logtalk
    source files. This location information is necessary for supporting some
    of the SWI-Prolog development tools.

    Updated the SWI-Prolog integration files in order to hide the source code
    of the Logtalk (::)/2 and (<<)/2 built-in predicates from this compiler
    debugging tools.

    Updated the SWI-Prolog hooks file in order to support tracing Logtalk
    source code using the SWI-Prolog graphical debugger and using the edit/1
    predicate with library notation and with the Logtalk "altdirs" flag on.

    Updated the ECLiPSe config file, simplifying some of the file handling
    predicates and making use of the recently implemented call/N built-in
    control constructs when available.

    Updated the GNU Prolog config file setting the "strict_iso" flag to "off"
    in order to avoid the annoying incompatibility of the predicate_property/2